right aligned figures no longer have a top margin due to floated elements not margin collapsing

--- a/lab/template/basic.scss
+++ b/lab/template/basic.scss
@@ -401,7 +401,7 @@ figure {
         &.right {
             max-width: 50%;
             float: right;
-            margin: $magic 0 $magic $magic;
+            margin: 0 0 $magic $magic;
         }
     }
 }
